--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     padding: 1rem 2rem;
     /* height: 200px;     */
     background-color: black;
+    max-width: 100vw;
 }
 
 .nav__ul{
@@ -34,7 +35,7 @@
 
 .hero__section img{
     background-image: url(Carpentry.jpg);
-    width: 100%;
+    width: 100vw;
     height: 80vh;
     object-fit: cover;
     background-repeat: no-repeat;
