--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
     padding: 0px;
 
     font-family: 'Alkatra', cursive;
-    font-size: 1rem;
+    font-size: 0.75rem;
 }
 .Bottom__contact{
-    margin-top: 0.3rem;
+    margin-top: 0.4rem;
 }
 
 .navbar__wrapper{
@@ -18,7 +18,7 @@
     padding: 1rem 2rem;
     /* height: 200px;     */
     background-color: black;
-    max-width: 100vw;
+    width: 100vw;
 }
 
 .nav__ul{
@@ -35,8 +35,9 @@
 
 .hero__section img{
     background-image: url(Carpentry.jpg);
-    width: 100vw;
+    width: 110vw;
     height: 80vh;
     object-fit: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
